--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,20 @@
 spring:
-   application:
+  application:
       name: movie-micro-service
    
-   datasource:
-     driver-class-name: org.h2.Driver
-     url: jdbc:h2:mem:movies
-     username: sa
-     password:
+  datasource:
+    url: jdbc:mysql://localhost:3306/security1
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: root
+    password: bhiShma#89
      
-   jpa:
-    database: h2
+  jpa:
     show-sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
-    defer-datasource-initialization: true
     hibernate:
-       ddl-auto: none
-       
-   h2:
-    consoel:
-       enabled: true
-       path: /h2-movie-console
-       settings:
-          web-allow-others: true
-          trace: false
+       ddl-auto: update
+    properties:
+       hibernate:
+         format_sql: true 
+
 server:
    port: 7171
